--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 	  <meta name="keywords" content="web design, affordable web design, professional web design">
   	<meta name="author" content="Brad Traversy">
     <title>Paul Web Deisgn | Services</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/favicon.png">
   </head>
   <body>
