--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="boxes">
       <div class="container">
         <div class="box">
-          <img src="./img/logo_html.png">
+          <img src="logo_html.png">
           <h3>HTML5 Markup</h3>
           <p>I will beautify your website using the latest HTML5 features.</p>
         </div>
