--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
           <p>I will beautify your website using the latest HTML5 features.</p>
         </div>
         <div class="box">
-          <img src="./img/logo_css.png">
+          <img src="logo_css.png">
           <h3>CSS3 Styling</h3>
           <p>This scripting language will beautify your website structure.</p>
         </div>
         <div class="box">
-          <img src="./img/logo_brush.png">
+          <img src="logo_brush.png">
           <h3>Graphic Design</h3>
           <p>Temporarily Unavailable for some reasons</p>
         </div>
